Import of MRAMBERG/Mojolicious-Plugin-RenderSteps-0.05 from CPAN.
gitpan-cpan-distribution: Mojolicious-Plugin-RenderSteps
gitpan-cpan-version:      0.05
gitpan-cpan-path:         MRAMBERG/Mojolicious-Plugin-RenderSteps-0.05.tar.gz
gitpan-cpan-author:       MRAMBERG
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -19,4 +19,8 @@ no_index:
     - inc
 requires:
   Mojolicious: '4.99'
-version: '0.04'
+resources:
+  bugtracker: https://github.com/marcusramberg/Mojolicious-Plugin-RenderSteps/issues
+  license: http://www.opensource.org/licenses/artistic-license-2.0
+  repository: https://github.com/marcusramberg/Mojolicious-Plugin-RenderSteps
+version: '0.05'
